Second Commit, Scrolling Starfield

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Patrol REMAKE</title>
     <script src="lib/phaser.js"></script>
+    <script src="src/scenes/Menu.js"></script>
+    <script src="src/scenes/Play.js"></script>
     <script src="src/main.js"></script>
+
+    <style>
+        body { background-color: beige;}
+    </style>
 </head>
 <body>
     You thought there was a game but it was me, Dio!
