--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Rocket.js"></script>
     <script src="src/prefabs/Ship.js"></script>
+    <script src="src/prefabs/TimeOrb.js"></script>
     <script src="src/scenes/Menu.js"></script>
     <script src="src/scenes/Play.js"></script>
     <script src="src/main.js"></script>
